# pyNonogram

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  errors.doctree  index.doctree  modules.doctree  nonogram.doctree  nonogram_grid.doctree
docs/_build/html/: errors.html  genindex.html  modules.html  nonogram_grid.html  py-modindex.html  searchindex.js
docs/_build/html/_modules/: index.html  nonogram.html  nonogram_grid.html
docs/_build/html/_sources/: nonogram_grid.rst.txt
examples/: flower.non  flower.py  house.non  house.py  solve_nonogram.py
html/: .buildinfo  index.html  nonogram.html  objects.inv  search.html
html/_sources/: modules.rst.txt  nonogram.rst.txt
pyNonogram/: ___init___.py  browser.py  display.py  errors.py  nonogram.py  nonogram_grid.py  scraper.py  solver.py
pyNonogram.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: display.py  game.py  main.py  scraper.py  solver.py  test.txt
tests/: test_nonogram.py  test_nonogram_grid.py
tests/test_nonograms/: test1.non  test2.non
